ajout structure nav

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>fosdnfk</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+
+    </header>
     <main></main>
     <footer></footer>
 </body>
