--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Hbafj</li>
+                <li>fsdfs</li>
+                <li>gdv</li>
+                <li>sfs</li>
             </ul>
         </nav>
 
